# gWatcher

./: CMakeLists.txt  README.md
src/: gwatch.cpp  main.cpp
tests/: tests.cpp
tests/test_data/: args_test.cpp  basic_test.cpp  no_var_test.cpp  recursion_test.cpp  short_int_test.cpp
tests/test_data/big_tests/: test1.cpp
